log
vi., 13 de may. de 2022 17:34:36: 
 sudoku.c | 81 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 81 insertions(+)
 tests:  3|3
total_score: 25/70
2adc986
do., 15 de may. de 2022 22:12:28: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
645a3c9
do., 15 de may. de 2022 22:17:23: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
f7fcbf8
do., 15 de may. de 2022 22:19:33: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:135:7: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
       if (is_final(aux))
       ^~
sudoku.c:138:8: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
        List * adj = get_adj_nodes(aux);
        ^~~~
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9605d1d
do., 15 de may. de 2022 22:20:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:135:7: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
       if (is_final(aux))
       ^~
sudoku.c:138:8: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
        List * adj = get_adj_nodes(aux);
        ^~~~
sudoku.c:153:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ea4b03f
do., 15 de may. de 2022 22:23:28: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:135:7: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
       if (is_final(aux))
       ^~
sudoku.c:138:8: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
        List * adj = get_adj_nodes(aux);
        ^~~~
sudoku.c:155:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2365f94
do., 15 de may. de 2022 22:28:35: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:136:7: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
       if (is_final(aux))
       ^~
sudoku.c:139:8: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
        List * adj = get_adj_nodes(aux);
        ^~~~
sudoku.c:156:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
874c255
do., 15 de may. de 2022 22:32:40: 
 sudoku.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c1c488c
do., 15 de may. de 2022 22:34:06: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
bbc26bc
do., 15 de may. de 2022 22:35:02: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b73c96f
do., 15 de may. de 2022 22:35:59: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b2e1113
do., 15 de may. de 2022 22:36:58: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
cf2924d
do., 15 de may. de 2022 22:40:11: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
047dfa3
do., 15 de may. de 2022 22:41:03: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
6f61e13
do., 15 de may. de 2022 22:42:52: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:101:19: error: incompatible type for argument 1 of 'is_valid'
          is_valid(*aux);
                   ^
sudoku.c:46:5: note: expected 'Node * {aka struct <anonymous> *}' but argument is of type 'Node {aka struct <anonymous>}'
 int is_valid(Node* n){
     ^~~~~~~~
Compilation failed
2cebb53
do., 15 de may. de 2022 22:43:11: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
42f5493
do., 15 de may. de 2022 22:44:31: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
cec8ea9
do., 15 de may. de 2022 22:51:22: 
 sudoku.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
 tests:  3|3
total_score: 25/70
3b99dba
do., 15 de may. de 2022 22:53:43: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
b77aa93
do., 15 de may. de 2022 22:55:29: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  3|3
total_score: 25/70
b237e55
do., 15 de may. de 2022 22:56:01: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
09ed157
do., 15 de may. de 2022 22:56:58: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
3437edf
do., 15 de may. de 2022 22:57:45: 
 sudoku.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  3|3
total_score: 25/70
03497ae
do., 15 de may. de 2022 22:59:21: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 30/70
ba80b37
do., 15 de may. de 2022 23:01:19: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
88f3f00
do., 15 de may. de 2022 23:05:26: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 30/70
a9a99ad
do., 15 de may. de 2022 23:05:58: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
c1d1c96
do., 15 de may. de 2022 23:06:41: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
0bc1d1a
do., 15 de may. de 2022 23:08:35: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
607014f
do., 15 de may. de 2022 23:12:47: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
c7f1f9a
do., 15 de may. de 2022 23:15:18: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
9351ed0
do., 15 de may. de 2022 23:17:33: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
c1921e2
do., 15 de may. de 2022 23:19:21: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c:121:3: error: expected identifier or '(' before 'for'
   for(i=0;i<9;i++){
   ^~~
sudoku.c:121:12: error: expected '=', ',', ';', 'asm' or '__attribute__' before '<' token
   for(i=0;i<9;i++){
            ^
sudoku.c:121:16: error: expected '=', ',', ';', 'asm' or '__attribute__' before '++' token
   for(i=0;i<9;i++){
                ^~
sudoku.c:126:5: error: expected identifier or '(' before 'return'
     return 1;
     ^~~~~~
sudoku.c:127:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
3b74777
do., 15 de may. de 2022 23:20:26: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  6|2
total_score: 45/70
2b821ad
